rustdocs/errors/rust-bitcoin-primitives-src-pow.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/primitives/src/pow.rs:5:5
  |
5 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/primitives/src/pow.rs:6:5
  |
6 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/primitives/src/pow.rs:8:5
  |
8 | use internals::write_err;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
5 + extern crate internals;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
  --> ../rust-bitcoin/primitives/src/pow.rs:54:1
   |
54 | encoding::encoder_newtype! {
   | ^^^^^^^^ use of unresolved module or unlinked crate `encoding`

error[E0425]: cannot find type `CompactTargetEncoder` in this scope
  --> ../rust-bitcoin/primitives/src/pow.rs:60:24
   |
60 |     type Encoder<'e> = CompactTargetEncoder;
   |                        ^^^^^^^^^^^^^^^^^^^^
...
69 | pub struct CompactTargetDecoder(encoding::ArrayDecoder<4>);
   | ----------------------------------------------------------- similarly named struct `CompactTargetDecoder` defined here
   |
help: a struct with a similar name exists
   |
60 -     type Encoder<'e> = CompactTargetEncoder;
60 +     type Encoder<'e> = CompactTargetDecoder;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
  --> ../rust-bitcoin/primitives/src/pow.rs:59:6
   |
59 | impl encoding::Encodable for CompactTarget {
   |      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
   |
   = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
  --> ../rust-bitcoin/primitives/src/pow.rs:69:33
   |
69 | pub struct CompactTargetDecoder(encoding::ArrayDecoder<4>);
   |                                 ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
   |
   = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
  --> ../rust-bitcoin/primitives/src/pow.rs:80:6
   |
80 | impl encoding::Decoder for CompactTargetDecoder {
   |      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
   |
   = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
  --> ../rust-bitcoin/primitives/src/pow.rs:99:6
   |
99 | impl encoding::Decodable for CompactTarget {
   |      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
   |
   = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
   --> ../rust-bitcoin/primitives/src/pow.rs:106:38
    |
106 | pub struct CompactTargetDecoderError(encoding::UnexpectedEofError);
    |                                      ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
    |
    = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
   --> ../rust-bitcoin/primitives/src/pow.rs:112:11
    |
112 | impl From<encoding::UnexpectedEofError> for CompactTargetDecoderError {
    |           ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
    |
    = help: you might be missing a crate named `encoding`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `encoding`
   --> ../rust-bitcoin/primitives/src/pow.rs:113:16
    |
113 |     fn from(e: encoding::UnexpectedEofError) -> Self { Self(e) }
    |                ^^^^^^^^ use of unresolved module or unlinked crate `encoding`
    |
    = help: you might be missing a crate named `encoding`

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
